fixed the message alignment problem

--- a/src/javascripts/components/displayMessage/displayMessage.scss
+++ b/src/javascripts/components/displayMessage/displayMessage.scss
@@ -9,7 +9,7 @@
   min-width: 80px;
   padding: 8px;
   border-radius: 18px;
-  margin: 0 auto;
+  margin: 10px;
 }
 
 .closebtn {
